--- a/snake/snake.css
+++ b/snake/snake.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
+    border-color: black, 1;
+    flex-grow: 1;
 }
 
